testsuite/tests/properties/override/test.out
== foo_node/test.lkt ==
test.lkt:4:5: error: ExampleNode.get_random_node returns FooNode whereas it overrides MiddleNode.get_random_node, which returns MiddleNode. The former should match the latter.
4 |     fun get_random_node(): FooNode = null[FooNode]
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


== middle_node/test.lkt ==
Code generation was successful

== null_node/test.lkt ==
test.lkt:4:5: error: ExampleNode.get_random_node returns NullNode whereas it overrides MiddleNode.get_random_node, which returns MiddleNode. The former should match the latter.
4 |     fun get_random_node(): NullNode = null[NullNode]
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


lkt_compile: Done
